@@ -1,0 +1,11 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8" />
+	</head>
+	<body>
+		<p>The empty doctype would normally result in
+		Element-not-declared errors.</p>
+		<p>It's silenced by disabling DTD validation when
+		encountering the empty &lt;!DOCTYPE html&gt;.</p>
+</html>
